k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  type: ClusterIP
  selector:
    app: message-service
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
